--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,3 +1,7 @@
 // Import your components CSS files here.
 @import "alert";
+@import "avatar";
+@import "banner";
+@import "card";
+@import "footer";
 @import "navbar";
