--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,8 @@ $orange: #E67E22;
 $green: #32B796;
 $gray: #000000;
 $light-gray: #F4F4F4;
+$white: #FFFFFF;
+
+$larder-green-primary: #00AA8D;
+$larder-green-lighter: #00BF9A;
+$larder-green-darker: #008975;
