--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: white;
+  background: $larder-green-lighter;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
@@ -37,7 +37,7 @@
 
 /* Navbar link */
 .navbar-wagon-link {
-  color: #616668;
+  color: $white;
   font-size: 14px;
 }
 .navbar-wagon-link:hover {
