--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,9 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url(<%= asset_path('Larder-banner') %>);">
+  <div class="banner-content">
+    <h1>Larder</h1>
+    <h3>Eat more. Waste Less</h3>
+    <p>What ingredients do you have?</p>
+  </div>
+</div>
+
+
