added items, search bar, not finished

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,20 @@
     <h1>Larder</h1>
     <h3>Eat more. Waste Less</h3>
     <p>What ingredients do you have?</p>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <%= form_tag(recipes_path, method: :get, :class => 'form-inline') do %>
+            <%= text_field_tag :q, nil, class: 'form-control search-style', placeholder: 'Search by ingredient...' %>
+            <%= button_tag(type: "submit", class: "btn btn-primary search-button") do %>
+              <i class="fa fa-search"></i>
+          <% end %>
+          <% end %>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
+
 
 
