--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -5,5 +5,7 @@
   <%= f.input :cuisine %>
   <%= f.input :servings %>
   <%= f.input :photo %>
-  <%= f.button :submit, class: 'btn btn-primary' %>
+  <div class="text-center">
+    <%= f.button :submit, class: 'btn btn-primary' %>
+  </div>
 <% end %>
