--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,1 +1,7 @@
-<%=  render 'form' %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
