--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,8 @@
-<%= render 'form' %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <%= render 'form' %>
+    </div>
+  </div>
+</div>
+
