--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,24 @@
-<h1>recipes index</h1>
+<h1 class="text-center">recipes index</h1>
+
+
+<div class="container cards">
+  <div class="row">
+      <% @recipes.each do |recipe| %>
+        <div class="col-xs-12">
+          <%= link_to recipe_path(recipe) do %>
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+              <div class="card-category"><%= recipe.cuisine %></div>
+              <div class="card-description">
+                <h2><%= recipe.name %></h2>
+                <p><%= recipe.description %></p>
+              </div>
+              <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+            </div>
+          <% end %>
+        </div>
+      <% end %>
+   </div>
+</div>
+
+
+
