very basic showpage

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,1 +1,14 @@
-<h1>show page!!!!</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= @recipe.photo %>);">
+  <div class="banner-content">
+    <h1 class="text-center"><%= @recipe.name %></h1>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <h2><%= @recipe.description %></h2>
+    <p>Duration - <%= @recipe.duration %> mins</p>
+  </div>
+</div>
+
+
