added info to dashboard and made changes to favourites

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,1 +1,32 @@
-<h1>my dashboard</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-12 offset-md-1">
+      <h1> Recipe dashboard </h1>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12 col-md-12 offset-md-1">
+      <h3> My saved recipes </h3>
+      <% @favourite_recipes.each do |recipe| %>
+          <div class="product">
+            <%= cl_image_tag ingredient.recipe.photo, class:"product-image hidden-xs" %>
+            <div class='product-body'>
+              <h3><%= recipe.name %></h3>
+              <p><%= recipe.description %></p>
+            </div>
+            <ul class="list-inline product-controls hidden-sm hidden-xs">
+              <li><%= link_to edit_recipe_path(ingredient.recipe) do %>
+                <i class="fa fa-pencil" aria-hidden="true"></i>
+              <% end %></li>
+              <li><%= link_to recipe_path(ingredient), method: :delete, data: { confirm: 'Are you sure?'} do %>
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              <% end %></li>
+            </ul>
+          </div>
+      <% end %>
+    </div>
+  </div>
+</div>
