--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,11 +1,9 @@
-
-<h1>recipes index</h1>
-
-<%= form_tag recipes_path, method: "get" do %>
-  <%=text_field_tag 'search', @search, placeholder: 'Enter new search term...' %>
-  <%= submit_tag :submit, class: 'btn btn-primary' %>
-<% end %>
-
+<div class="text-center">
+  <%= form_tag recipes_path, method: "get" do %>
+    <%=text_field_tag 'search', @search, placeholder: 'Enter new search term...' %>
+    <%= submit_tag :submit, class: 'btn btn-primary' %>
+  <% end %>
+</div>
 <!-- set the form to go back to the recipes path but edit the method back to get to load index not the create action-->
 <!-- then add a text field tag for the search to display instance variable of search (in the recipes controller) and if there is nothing have a placeholder in the search box -->
 <!--  create the button for someone to submit with bootstrap-->
@@ -20,6 +18,8 @@
               <div class="card-description">
                 <h2><%= recipe.name %></h2>
                 <p><%= recipe.description %></p>
+                <%= image_tag('cutlery.png', size: "30x30", alt: "Servings") %><p><%= recipe.servings %></p>
+
               </div>
               <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
             </div>
