--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -7,6 +7,17 @@
   position: relative;
   margin-bottom: 1px;
 }
+
+ .dashboard-card {
+  height: 100px;
+  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
+  background-size: cover !important;
+  background-position: center;
+  color: white;
+  position: relative;
+  margin-bottom: 5px;
+
+}
 .card-user {
   position: absolute;
   right: 10px;
@@ -47,3 +58,5 @@
 .card-link:hover {
   opacity: 0.1;
 }
+
+
