--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -6,10 +6,11 @@ h1 {
   font-size:30px;
   letter-spacing:2px;
   font-family:Muli, sans-serif;
+  text-align: center;
   }
 
 h2 {
-  color: black;
+  color: white;
   font-size: 25px;
   font-family:Muli, sans-serif;
   font-weight: 100;
@@ -22,6 +23,15 @@ h3 {
   font-weight: 100;
 }
 
-i.fa.fa-trash-o {
+
+.trashcan {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.trashcan i.fa.fa-trash-o {
   color: #1f2e2e;
 }
+
+
