--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,38 +9,21 @@
   <div class="row">
      <% @recipes.each do |recipe| %>
       <div class="col-xs-12">
-        <div class="product">
+        <div class="dashboard-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url();">
           <%= cl_image_tag recipe.photo, class:"product-image hidden-xs" %>
              <div class="card-description">
                 <h2><%= recipe.name %></h2>
               </div>
-               <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-                <%= link_to favourite_path(recipe), method: :delete, data: { confirm: 'Are you sure?'} do %>
-                  <i class="fa fa-trash-o" aria-hidden="true"></i>
-                <% end %>
+                <div class="trashcan">
+                  <%= link_to favourite_path(@user.favourite_for(recipe)), method: :delete, data: { confirm: 'Are you sure?'} do %>
+                    <i class="fa fa-trash-o" aria-hidden="true"></i>
+                  <% end %>
+                </div>
             </div>
           </div>
-        </div>
-      </div>
-    <% end %>
-
-
-
-<!-- <div class="container cards">
-  <div class="row">
-      <% @recipes.each do |recipe| %>
-        <div class="col-xs-12">
-          <%= link_to recipe_path(recipe) do %>
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-              <div class="card-category"><%= recipe.cuisine %></div>
-              <div class="card-description">
-                <h2><%= recipe.name %></h2>
-                <p><%= recipe.description %></p>
-              </div>
-              <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-            </div>
           <% end %>
         </div>
-      <% end %>
-   </div>
-</div> -->
+      </div>
+
+
+
