Search functionality working

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,9 @@
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
-          <%= simple_form_for Recipe.new, url: recipes_path, method: :get, class: 'form-inline' do |f| %>
-            <%= f.association :ingredients %>
-          </form>
+          <%= simple_form_for Recipe.new, url: recipes_path, method: :get do |f| %>
+            <%= f.association :ingredients, include_blank: false, include_hidden: false %>
+            <%= f.submit 'Search', class: 'btn btn-primary' %>
           <%#= form_tag(recipes_path, method: :get, :class => 'form-inline') do %>
             <%#= text_field_tag :search, nil, class: 'form-control search-style', placeholder: 'Search by ingredient...' %>
             <%#= button_tag(type: "submit", class: "btn btn-primary search-button") do %>
@@ -21,8 +21,8 @@
   </div>
 </div>
 
+<%= stylesheet_pack_tag 'home_search', media: 'all' %>
+
 <%= content_for(:after_js) do %>
-  <script>
-    console.log('hello')
-  </script>
+  <%= javascript_pack_tag 'home_search' %>
 <% end %>
