--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,5 +1,4 @@
 .banner {
-  color: white;
   text-align: center;
   height: calc(100vh);  /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
@@ -8,6 +7,7 @@
   justify-content: center;
 }
 .banner h1 {
+  color: white;
   font-size: 50px;
   font-weight: bold;
   text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
@@ -15,15 +15,21 @@
   margin-bottom: 2px;
 }
 .banner h3 {
+  color: white;
   font-size: 20px;
   margin-top: 0px;
   margin-bottom: 3px;
 }
 
 .banner p {
+  color: white;
   font-size: 15px;
   font-weight: lighter;
   margin-bottom: 245px;
   color: rgb(255, 255, 255);
   opacity: 0.6;
+}
+
+.banner label {
+  color: white;
 }
