--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -13,12 +13,13 @@
         <div class="col-xs-12">
           <%= link_to recipe_path(recipe) do %>
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
-              <div class="card-category"><%= recipe.cuisine %></div>
-              <div class="card-description">
-                <h2><%= recipe.name %></h2>
-                <p><%= recipe.description %></p>
-                <%= image_tag('cutlery.png', size: "30x30", alt: "Servings") %><p><%= recipe.servings %></p>
-
+              <div class="card-category"><%= recipe.name %></div>
+                <div class="card-servings">
+                  <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings") %><p><%= recipe.servings %></p>
+                </div>
+                <div class="card-duration">
+                  <p><%= recipe.duration %></p><%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
+                </div>
               </div>
               <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
             </div>
