made edits to the sweetalert and dashboard

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -9,8 +9,11 @@
   <div class="row">
      <% @recipes.each do |recipe| %>
       <div class="col-xs-12">
-        <div class="dashboard-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url();">
-          <%= cl_image_tag recipe.photo, class:"product-image hidden-xs" %>
+        <% if recipe.photo? %>
+          <div class="dashboard-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path recipe.photo, class:"product-image" %>);">
+             <% else %>
+                <div class="dashboard-card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url("http://via.placeholder.com/300x400");">
+                <% end %>
              <div class="card-description">
                 <h2><%= recipe.name %></h2>
               </div>
@@ -21,9 +24,9 @@
                 </div>
             </div>
           </div>
-          <% end %>
-        </div>
-      </div>
+      <% end %>
+    </div>
+  </div>
 
 
 
