--- a/app/views/recipes/_quantity_fields.html.erb
+++ b/app/views/recipes/_quantity_fields.html.erb
@@ -1,8 +1,11 @@
-<div class="nested-fields quantities-fields">
-  <div class="ingredient_from_list">
-    <%= f.association :ingredient, :collection => Ingredient.all.order(:name), :prompt => 'Choose an existing ingredient' %>
-   </div>
-   <%= link_to_add_association 'or create a new ingredient', f, :ingredient %>
-   <%=  f.input :quantity %>
-   <%=  link_to_remove_association "remove ingredient", f %>
+<div class="nested-fields quantities-fields row">
+  <div class="col-xs-5">
+    <%= f.association :ingredient, collection: Ingredient.all, prompt: 'Choose an ingredient', input_html: { class: 'ingredient-dropdown' } %>
+  </div>
+  <div class="col-xs-5">
+    <%=  f.input :quantity %>
+  </div>
+  <div class="col-xs-2">
+    <%= link_to_remove_association "x", f, class: 'btn btn-danger' %>
+  </div>
 </div>
