--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,8 +1,11 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12">
+    <div class="col-xs-12" id="cocoon-container">
       <%= render 'form' %>
     </div>
   </div>
 </div>
 
+<%= content_for(:after_js) do %>
+  <%= javascript_pack_tag 'new_recipe' %>
+<% end %>
