added two buttons

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,8 +11,16 @@
   </div>
 </div>
 
+<!-- if recipe is not one of your favourites, display:  -->
 <div class="form-inline text-center">
   <%= render 'favourites/form_favourites' %>
+</div>
+
+<!-- if recipe IS a favourite, display:  -->
+<div class="form-inline text-center">
+  <%= link_to favourite_path(@user.favourite_for(@recipe)), method: :delete, data: { confirm: 'Are you sure?'} do %>
+    <i class="fa fa-trash-o" aria-hidden="true"></i>
+  <% end %>
 </div>
 
 
