added two different favourite buttons on the show page

--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -11,24 +11,17 @@
   </div>
 </div>
 
-<!-- if recipe is not one of your favourites, display:  -->
-
+<% if @recipe != @user.favourite_for(@recipe).recipe %>
   <div class="form-inline text-center">
     <%= render 'favourites/form_favourites' %>
   </div>
-
-<!-- if recipe IS a favourite, display:  -->
-<!-- at the moment this code only works on a show page which is already your favouite
- -->
+<% else %>
   <div class="form-inline text-center">
     <%= link_to favourite_path(@user.favourite_for(@recipe)), method: :delete, data: { confirm: 'Are you sure?'} do %>
-      <i class="fa fa-trash-o" aria-hidden="true"></i>
+      <button>remove favourite</button>
     <% end %>
   </div>
-  <% else %>
-
-
-
+<% end %>
 
 <%= content_for(:after_js) do %>
   <script>
