--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,17 +1,40 @@
+$card-margin-top: 20px;
+
 .card {
-  height: 175px;
+  margin-top: $card-margin-top;
+  height: calc((100vh - 70px - #{$card-margin-top } * 3 ) / 2 );
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
   background-size: cover !important;
   background-position: center;
   color: white;
+  padding: 10px;
+  border-radius: 7px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.24);
+  transition: all 0.2s cubic-bezier(.25,.8,.25,1);
+  display: flex;
   position: relative;
-  margin-bottom: 1px;
+  justify-content: center;
+  align-items: center;
 }
+
+.card:hover {
+  box-shadow: 0 16px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
 .card-servings {
   position: absolute;
   left: 10px;
   bottom: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.card-servings .cut {
+  margin-right: 5px;
+}
+
+
 .card-duration {
   position: absolute;
   right: 10px;
@@ -27,11 +50,11 @@
   margin-bottom: 5px;
 
 }
-.card-user {
+.card-favourite {
   position: absolute;
   right: 10px;
   top: 10px;
-  width: 40px;
+  width: 30px;
   border-radius: 50%;
 }
 .card-category {
