--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -10,19 +10,27 @@
 <div class="container cards">
   <div class="row">
       <% @recipes.each do |recipe| %>
-        <div class="col-xs-12">
+        <div class="col-xs-12 col-sm-6 col-lg-4">
           <%= link_to recipe_path(recipe) do %>
-            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('<%= cl_image_path(recipe.photo? ? recipe.photo : 'https://kitt.lewagon.com/placeholder/cities/shanghai') %>');">
               <div class="card-category">
                 <%= recipe.name %>
               </div>
               <div class="card-servings">
-                <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings") %><p><%= recipe.servings %></p>
+                <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings", class: "cut") %> <%= recipe.servings %>
               </div>
               <div class="card-duration">
-                <p><%= recipe.duration %></p><%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
+                <%= recipe.duration %>min<%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
               </div>
-              <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+              <% if @favourite_recipes_id.include?(recipe.id) %>
+                <div class="card-favourite">
+                  <%= image_tag('full-star.png', size: "30x30", alt: "Favourite") %>
+                </div>
+              <% else %>
+                <div class="card-favourite">
+                  <%= image_tag('empty-star.png', size: "30x30", alt: "Favourite") %>
+                </div>
+              <% end %>
             </div>
           <% end %>
         </div>
@@ -33,3 +41,4 @@
 <%= content_for(:after_js) do %>
   <%= javascript_pack_tag 'home_search' %>
 <% end %>
+
