--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,27 +7,26 @@
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right hidden-xs hidden-sm">
-
     <% if user_signed_in? %>
-
-      <!-- Links when logged in - COMMENTED OUT AS NOT SURE WE NEED LINKS -->
-     <!--  <%= link_to "Host", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Trips", "#", class: "navbar-wagon-item navbar-wagon-link" %>
-      <%= link_to "Messages", "#", class: "navbar-wagon-item navbar-wagon-link" %> -->
-
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <% avatar_url = current_user.avatar? ? current_user.avatar : "user-black.png" %>
+          <%= image_tag avatar_url, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", data: { toggle: 'dropdown' } %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to "/dashboard" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
+              <%= link_to "/users/edit" do %>
+                <i class="fa fa-user"></i> <%= t(".profile", default: "Edit profile") %>
               <% end %>
             </li>
             <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-home"></i>  <%= t(".profile", default: "Home") %>
+              <%= link_to "/dashboard" do %>
+                <i class="fa fa-home"></i>  <%= t(".profile", default: "Dashboard") %>
+              <% end %>
+            </li>
+            <li>
+              <%= link_to "/recipes/new" do %>
+                <i class="fa fa-plus-circle"></i>  <%= t(".profile", default: "Add a recipe") %>
               <% end %>
             </li>
             <li>
@@ -38,22 +37,24 @@
           </ul>
         </div>
       </div>
+
+      <!-- Dropdown list appearing on mobile only -->
+      <div class="navbar-wagon-item hidden-md hidden-lg">
+        <div class="dropdown">
+          <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown" id="icon-white" ></i>
+          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+            <li><a href="/users/edit">Edit profile</a></li>
+            <li><a href="/dashboard">Dashboard</a></li>
+            <li><a href="/recipes/new">Add a recipe</a></li>
+            <li><a href="">Log out</a></li>
+          </ul>
+        </div>
+      </div>
     <% else %>
       <!-- Login link (when logged out) -->
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
     <% end %>
   </div>
 
-  <!-- Dropdown list appearing on mobile only -->
-  <div class="navbar-wagon-item hidden-md hidden-lg">
-    <div class="dropdown">
-      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown" id="icon-white" ></i>
-      <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="/dashboard">Dashboard</a></li>
-        <li><a href="/recipes/new">Add a recipe</a></li>
-        <li><a href="">Log out</a></li>
-      </ul>
-    </div>
-  </div>
 </div>
 
