--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,13 +1,13 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= @recipe.photo %>);">
   <div class="banner-content">
     <h1 class="text-center"><%= @recipe.name %></h1>
+    <p><%= @recipe.cuisine %></p>
   </div>
 </div>
 
 <div class="container">
   <div class="row">
     <h2><%= @recipe.description %></h2>
-    <p>Duration - <%= @recipe.duration %> mins</p>
   </div>
 </div>
 
