title for pages

--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, 'My larder dashboard') %>
+
 <div class="tabs">
   <a class="tab active" id="tab-favourite" href="#">
     <h3><%= Favourite.count %></h3>
