--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, 'Larder') %>
+
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= asset_path('Larder-banner') %>);">
   <div class="banner-content">
     <h1>Larder</h1>
