--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for(:title, 'Create a new recipe on Larder') %>
+
 <div class="container">
   <div class="row">
     <div class="col-xs-12" id="cocoon-container">
