goodfood seed working, needs refining

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -4,6 +4,7 @@
   <%= f.input :duration %>
   <%= f.input :cuisine %>
   <%= f.input :servings %>
+  <%= f.input :method %>
   <%= f.input :photo %>
   <div id="quantities">
     <%= f.simple_fields_for :quantities do |q| %>
