--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   Larder
 <% end %>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), image-url('larder-banner.png');">
+<div class="banner">
   <div class="banner-content">
     <h1>Larder</h1>
     <h3>Eat more. Waste Less</h3>
