--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -50,7 +50,7 @@
   let createBtn = document.getElementById('sweet-alert-demo')
   createBtn.addEventListener('click', () => {
     document.body.addEventListener('click', () => {
-      window.location.href = "http://localhost:3000/dashboard";
+      window.location.href = "/dashboard";
     })
   })
   </script>
