fav button working

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,9 +16,15 @@ $card-margin-top: 20px;
   justify-content: center;
   align-items: center;
 }
-
 .card:hover {
   box-shadow: 0 16px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+}
+
+.card-center {
+  height: 30px;
+  width: 30px;
+  justify-content: center;
+  align-items: center;
 }
 
 .card-servings {
@@ -29,11 +35,9 @@ $card-margin-top: 20px;
   justify-content: center;
   align-items: center;
 }
-
 .card-servings .cut {
   margin-right: 5px;
 }
-
 
 .card-duration {
   position: absolute;
