--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,39 +1,53 @@
 <% content_for(:title, @recipe.name) %>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= @recipe.photo %>);">
+<div class="half-screen" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= @recipe.photo %>);">
   <div class="banner-content">
-    <h1 class="text-center"><%= @recipe.name %></h1>
-    <p><%= @recipe.cuisine %></p>
+    <div class="card-category">
+      <%= @recipe.name %>
+    </div>
+    <div class="card-servings">
+      <%= image_tag('cutlery.svg', size: "30x30", alt: "Servings", class: "cut") %> <%= @recipe.servings %>
+    </div>
+
+    <div class="card-center">
+      <% if @recipe != current_user.favourite_for(@recipe)&.recipe %>
+          <%= render 'favourites/form_favourites' %>
+      <% else %>
+        <%= link_to favourite_path(current_user.favourite_for(@recipe)), method: :delete, data: { confirm: 'Are you sure?'} do %>
+          <%= image_tag("full-star-add.png") %>
+        <% end %>
+      <%end %>
+    </div>
+
+    <div class="card-duration">
+      <%= @recipe.duration %>min<%= image_tag('hourglass.svg', size: "30x30", alt: "Duration") %>
+    </div>
+    <% if @favourite_recipes_id.include?(@recipe.id) %>
+      <div class="card-favourite">
+        <%= image_tag('full-star.png', size: "30x30", alt: "Favourite") %>
+      </div>
+    <% else %>
+      <div class="card-favourite">
+        <%= image_tag('empty-star.png', size: "30x30", alt: "Favourite") %>
+      </div>
+    <% end %>
   </div>
 </div>
 
 <div class="container">
   <div class="row">
-    <h2><%= @recipe.description %></h2>
     <ul>
-    <% @recipe.ingredients do |ingredient| %>
+    <% @recipe.ingredients.each do |ingredient| %>
     <li>
-      <%= ingredient.name %>
+      <%= ingredient.name  %>
     </li>
     <% end %>
     </ul>
-    <h2><%= @recipe.method %></h2>
+    <h6><%= @recipe.method %></h6>
   </div>
 </div>
 
 
-
-<% if @recipe != @user.favourite_for(@recipe)&.recipe %>
-  <div class="form-inline text-center">
-    <%= render 'favourites/form_favourites' %>
-  </div>
-<% else %>
-  <div class="form-inline text-center">
-    <%= link_to favourite_path(@user.favourite_for(@recipe)), method: :delete, data: { confirm: 'Are you sure?'} do %>
-      <button>remove favourite</button>
-    <% end %>
-  </div>
-  <%end %>
 
 <%= content_for(:after_js) do %>
   <script>
