--- a/app/views/recipes/_recipes_container.html.erb
+++ b/app/views/recipes/_recipes_container.html.erb
@@ -4,6 +4,10 @@
       <%= render 'recipes/recipe_card', user: user, recipe: recipe %>
     <% end %>
   <% else %>
-    <p>No results!</p>
+    <div class="sorry-message-container">
+      <div class="sorry-message">
+        <p>No results!</p>
+      </div>
+    </div>
   <% end %>
  </div>
